--- a/style(css)/style-1800.css
+++ b/style(css)/style-1800.css
@@ -63,3 +63,11 @@ img:hover, video:hover { transform: scale(1.01); }
     background: #2f4f4f !important;
     color: #fff !important;
 }
+main {
+    padding-top: 160px !important; 
+}
+
+/* 如果你用了磨砂玻璃效果，请确保 .container 的 padding 不要覆盖上面的 main */
+.container {
+    padding: 25px !important; 
+}
