Add padding to main and container styles

--- a/style(css)/style-1990.css
+++ b/style(css)/style-1990.css
@@ -64,3 +64,11 @@ img, video {
     color: #fff !important;
     border-color: #000 !important;
 }
+main {
+    padding-top: 160px !important; 
+}
+
+/* 如果你用了磨砂玻璃效果，请确保 .container 的 padding 不要覆盖上面的 main */
+.container {
+    padding: 25px !important; 
+}
