--- a/style(css)/style-2035.css
+++ b/style(css)/style-2035.css
@@ -69,3 +69,11 @@ h1, h2, h3 {
     background: #ff00ff !important;
     box-shadow: 0 0 15px #ff00ff;
 }
+main {
+    padding-top: 160px !important; 
+}
+
+/* 如果你用了磨砂玻璃效果，请确保 .container 的 padding 不要覆盖上面的 main */
+.container {
+    padding: 25px !important; 
+}
